fix home colors on dark mode

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -92,7 +92,7 @@
 	}
 
 	.avatar {
-		background-color: $blue-grey;
+		background-color: $light-blue-grey;
 		box-shadow: 1px 1px 5px $d-shadow;
 	}
 }
