--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -19,7 +19,7 @@ $dark-nav: rgba($dark, 0.9);
 $darkest-nav: rgba($darkest, 0.9);
 
 // dark mode
-$d-lightest: #424250;
+$d-lightest: #4d4d5d;
 $d-light: #494958;
 $d-medium: #3b3b48;
 $d-dark: #383844;
@@ -38,6 +38,7 @@ $dark-grey: #7e7e95;
 $light-grey: #c8c8c8;
 $lighter-grey: #e7e7e7;
 $blue-grey: #4f4f5e;
+$light-blue-grey: #5e5e6d;
 
 // sizes
 $xxxs: 0.4rem;
